
	* Makefile.in: Added media.pl to the list of targets.

2001-02-06  Arturo Espinosa  <arturo@ximian.com>

	* replace.pl.in: xst_replace_join_hash, the last of the replacing
	  functions for network to be finished.
	* network-conf.in: bug in xml_parse_network for nameserver and 
	  searchdomain.
	* General bug fixes on all the new code and other parts.

2001-02-06  Arturo Espinosa  <arturo@ximian.com>

	* be.pl.in: be_buffer_clean, be_buffer_join_lines: new functions to
	  help with in-line editting.
	* network-conf.in: support for "auto" and "description" tags when
	  parsing: forgot these.
	* network.pl.in: xst_map_dist -> be_map_dist, pass the hash with
	  the configuration to the replace_with_table function.
	* replace.pl.in: Lots of code, for writing configuration. Partialy
	  tested, but hash replacing is missing still.

2001-02-05  Tambet Ingo  <tambet@ximian.com>

	* Makefile.am (backends): Added boot-conf into build

	* boot-conf.in: New file.

2001-02-05  Arturo Espinosa  <arturo@ximian.com>

	* be.pl.in: (be_buffer_{load,save}): load a file into an array buffer
	and save it back.
	(be_map_dist): moved from network.pl.in.
	* network.pl.in: minor & typos.
	* replace.pl.in: routines for in-line replacing.
	* Makefile.am: install replace routines.
	* .cvsignore: ignore replace routines .pl file.

2001-02-05  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_split): Keep all tokens on line
	  associated with key.

	* media.pl.in: Added.

	* removable-media.pl.in: Added.

2001-02-04  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_line_first): Stopped from losing return value.
	  Added & prefix to function call. Close file when done.
	* parse.pl.in (xst_parse_chat): Prevented $found from being global.
	  Close file when done.

2001-01-31  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (xml_print_nis): test function for nis.

2001-01-28  Arturo Espinosa  <arturo@ximian.com>
